--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XIz-TD-94c">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="v8L-Zk-eF3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -84,13 +84,52 @@
             </objects>
             <point key="canvasLocation" x="1724" y="-748.87556221889065"/>
         </scene>
+        <!--Tasks-->
+        <scene sceneID="AYR-8l-vC9">
+            <objects>
+                <viewController storyboardIdentifier="TasksViewController" id="L5Y-To-hgp" customClass="TasksViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="b9m-JB-9a4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="arS-MS-tUh">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8BU-Ch-a6F">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="arS-MS-tUh" firstAttribute="top" secondItem="ubN-Mz-7Z2" secondAttribute="top" id="4BD-Gk-u54"/>
+                            <constraint firstItem="arS-MS-tUh" firstAttribute="leading" secondItem="ubN-Mz-7Z2" secondAttribute="leading" id="T5Q-be-3ul"/>
+                            <constraint firstItem="ubN-Mz-7Z2" firstAttribute="bottom" secondItem="arS-MS-tUh" secondAttribute="bottom" id="vCA-SR-dfP"/>
+                            <constraint firstItem="ubN-Mz-7Z2" firstAttribute="trailing" secondItem="arS-MS-tUh" secondAttribute="trailing" id="vVz-Js-xRp"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ubN-Mz-7Z2"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Tasks" id="grC-EI-5FZ"/>
+                    <connections>
+                        <outlet property="collectionView" destination="arS-MS-tUh" id="z4o-mZ-j7T"/>
+                        <outlet property="collectionViewFlowLayout" destination="8BU-Ch-a6F" id="wmt-TT-TPl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zdv-ve-fdJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1724" y="-1537"/>
+        </scene>
         <!--Settings-->
         <scene sceneID="WX8-uJ-Z40">
             <objects>
                 <viewControllerPlaceholder storyboardName="Settings" id="pW2-zX-ZIV" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="38H-2q-3TQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2332" y="-1396"/>
+            <point key="canvasLocation" x="3271.1999999999998" y="-1396.1019490254873"/>
         </scene>
         <!--Task Editor View Controller-->
         <scene sceneID="UDi-eW-VHO">
@@ -443,7 +482,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cDg-Wi-Ye8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2966" y="-1124"/>
+            <point key="canvasLocation" x="3904.8000000000002" y="-1124.8875562218891"/>
         </scene>
         <!--Completed Tasks View Controller-->
         <scene sceneID="lVC-MV-v3e">
@@ -483,12 +522,32 @@
             </objects>
             <point key="canvasLocation" x="2966" y="-551"/>
         </scene>
+        <!--Tasks-->
+        <scene sceneID="hOn-ll-prf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="v8L-Zk-eF3" customClass="BaseNavigationController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Tasks" image="Tasks" landscapeImage="Tasks" largeContentSizeImage="Tasks" id="ggO-sv-E1Q"/>
+                    <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="eKN-fc-41F">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="L5Y-To-hgp" kind="relationship" relationship="rootViewController" id="sLg-2v-9xU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UOq-lL-t8b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="750" y="-1537"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Plus" width="50" height="50"/>
         <image name="Tasks" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="P0C-2o-NYU"/>
+        <segue reference="qXS-1W-mkt"/>
     </inferredMetricsTieBreakers>
 </document>
